--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -3,14 +3,23 @@
 }
 
 .gallery__item {
-  padding: 24px 20px 25px;
+  padding: 25px 20px;
+}
+
+@media (max-width: $mobile-width-only) {
+  .gallery__item {
+    border-bottom: 1px solid #e5e5e5;
+  }
 }
 
 @media (min-width: $tablet-width) {
+  .gallery {
+    padding: 55px 60px 25px;
+  }
+
   .gallery__list {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 42px 60px 29px;
   }
 
   .gallery__item {
@@ -23,6 +32,11 @@
 }
 
 @media (min-width: $desktop-width) {
+  .gallery {
+    padding: 0;
+    padding-top: 22px;
+  }
+  
   .gallery__list {
     grid-template-columns: 1fr 1fr 1fr;
   }
