--- a/source/sass/blocks/item-advantages.scss
+++ b/source/sass/blocks/item-advantages.scss
@@ -4,9 +4,13 @@
   margin-bottom: 11px;
 }
 
+.item-advantages__number {
+  margin: 0;
+  margin-bottom: 17px;
+}
+
 .item-advantages__description {
   margin: 0;
-  margin-top: 17px;
 }
 
 .item-advantages__image {
@@ -19,31 +23,74 @@
 }
 
 .item-advantages__wrapper {
-  padding: 24px 18px;
+  padding: 25px 32px;
+}
+
+.item-advantages__wrapper--with-img {
+  padding: 35px 18px 39px;
+}
+
+@media (max-width: $mobile-width-only) {
+  .item-advantages__image {
+    min-height: 260px;
+    object-fit: cover;
+  }
+
+  .item-advantages__title {
+    br {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .item-advantages__description {
+    br {
+      display: none;
+    }
+  }
 }
 
 @media (min-width: $tablet-width) {
   .item-advantages__wrapper {
-    padding: 44px 33px;
-    width: 256px;
+    padding: 41px 48px;
+  }
+
+  .item-advantages__wrapper--with-img {
+    padding: 52px 33px 30px;
   }
 
   .item-advantages__title {
     font-size: $tablet-title;
+    margin-bottom: 15px;
+  }
+
+  .item-advantages__number {
+    margin-bottom: 23px;
   }
 
   .item-advantages__image {
-    min-width: 512px;
+    grid-column: span 2;
+    object-fit: cover;
+    height: 100%;
   }
 }
 
 @media (min-width: $desktop-width) {
   .item-advantages__wrapper {
-    padding: 52px 50px;
+    padding: 52px 55px 51px;
     width: 400px;
   }
 
   .item-advantages__image {
     max-width: 800px;
+  }
+
+  .item-advantages__title {
+    margin-bottom: 16px;
+  }
+
+  .item-advantages__number {
+    margin-bottom: 22px;
   }
 }
