--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -29,10 +29,7 @@
 
 @media (max-width: $mobile-width-only) {
   .advantages__item--with-triangle {
-    background-image: url("../../img/advantages-triangle.svg");
-    background-repeat: no-repeat;
-    background-position: center top;
-    background-size: 100%;
+    background-image: url("../../img/stack.svg#advantages-triangle");
     padding-top: 36px;
   }
 
@@ -59,8 +56,12 @@
 
   .advantages__item--with-img {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 2fr;
     grid-column: 1/-1;
+  }
+
+  .advantages__item--reverse {
+    grid-template-columns: 2fr 1fr;
   }
 
   .advantages__wrapper {
