--- a/source/sass/blocks/form-reviews.scss
+++ b/source/sass/blocks/form-reviews.scss
@@ -8,7 +8,7 @@
 .form-reviews__title {
   @include title;
   text-align: center;
-  padding-bottom: 20px;
+  padding-top: 24px;
 }
 
 .form-reviews__list {
@@ -34,23 +34,23 @@
 }
 
 .form-reviews__group--name {
-  padding: 24px 20px 39px;
+  padding: 21px 20px 39px;
 }
 
 .form-reviews__group--phone {
-  padding: 24px 20px 34px;
+  padding: 20px 20px 34px;
 }
 
 .form-reviews__group--impression {
-  padding: 24px 20px;
+  padding: 21px 20px 23px;
 }
 
 .form-reviews__group--attractions {
-  padding: 24px 20px;
+  padding: 21px 20px 23px;
 }
 
 .form-reviews__group--emotions {
-  padding: 24px 20px 28px;
+  padding: 24px 20px 27px;
 }
 
 .form-reviews__button {
@@ -83,6 +83,13 @@
 
   .form-reviews__title {
     font-size: 21px;
+    padding-top: 83px;
+  }
+
+  .form-reviews__title--impression,
+  .form-reviews__title--attractions,
+  .form-reviews__title--emotions {
+    padding-top: 0;
   }
 
   .form-reviews__description {
@@ -102,7 +109,7 @@
   }
 
   .form-reviews__group--name {
-    padding: 91px 28px 62px 60px;
+    padding: 28px 28px 62px 60px;
     position: relative;
   }
 
@@ -113,24 +120,24 @@
     width: 1px;
     height: 338px;
     background-color: #dbdbdb;
-    top: 29px;
+    top: -35px;
     right: 0;
   }
 
   .form-reviews__group--phone {
-    padding: 91px 60px 62px 28px;
+    padding: 28px 60px 62px 28px;
   }
 
   .form-reviews__group--impression {
-    padding: 0 96px 48px;
+    padding: 21px 96px 48px;
   }
 
   .form-reviews__group--attractions {
-    padding: 10px 144px 41px;
+    padding: 29px 144px 41px;
   }
 
   .form-reviews__group--emotions {
-    padding: 9px 60px 30px;
+    padding: 29px 60px 30px;
   }
 
   .form-reviews__group--name::before,
@@ -206,24 +213,23 @@
   }
 
   .form-reviews__group--name::after {
-    top: -54px;
+    top: -34px;
   }
 
   .form-reviews__group--phone {
-    padding: 8px 120px 70px 49px;
+    padding: 27px 120px 70px 49px;
   }
 
   .form-reviews__group--impression {
-    padding: 25px 120px 74px;
-    gap: 10px;
+    padding: 46px 120px 74px;
   }
 
   .form-reviews__group--attractions {
-    padding: 39px 120px 88px;
+    padding: 60px 120px 88px;
   }
 
   .form-reviews__group--emotions {
-    padding: 7px 216px 24px;
+    padding: 26px 216px 24px;
   }
 
   .form-reviews__group--name::before,
@@ -245,6 +251,10 @@
   .form-reviews__group--impression::after,
   .form-reviews__group--attractions::after {
     right: 120px;
+  }
+
+  .form-reviews__title {
+    padding-top: 0;
   }
 
   .form-reviews__button {
