--- a/source/sass/blocks/like-button.scss
+++ b/source/sass/blocks/like-button.scss
@@ -16,8 +16,8 @@
 
 .like-button__icon {
   display: block;
-  -webkit-mask-image: url("../../img/like-icon.svg"); /* stylelint-disable-line */
-  mask-image: url("../../img/like-icon.svg"); /* stylelint-disable-line */
+  -webkit-mask-image: url("../../img/stack.svg#like-icon"); /* stylelint-disable-line */
+  mask-image: url("../../img/stack.svg#like-icon"); /* stylelint-disable-line */
   -webkit-mask-repeat: no-repeat; /* stylelint-disable-line */
   mask-repeat: no-repeat; /* stylelint-disable-line */
   background-color: rgba(0, 0, 0, 0.3);
@@ -30,7 +30,7 @@
 
 @media (min-width: $tablet-width) {
   .like-button__icon {
-    top: 8px;
+    top: 7px;
   }
 }
 
