--- a/source/sass/blocks/item-reviews.scss
+++ b/source/sass/blocks/item-reviews.scss
@@ -31,11 +31,11 @@
 }
 
 .item-reviews__input--phone {
-  background-image: url("../../img/stack.svg#phone-icon");
+  background-image: url("img/stack.svg#phone-icon");
 }
 
 .item-reviews__input--mail {
-  background-image: url("../../img/stack.svg#mail-icon");
+  background-image: url("img/stack.svg#mail-icon");
 }
 
 .item-reviews__input--mail,
@@ -51,7 +51,7 @@
   width: 22px;
   height: 46px;
   left: 12px;
-  background-image: url("../../img/stack.svg#check-mark-icon");
+  background-image: url("img/stack.svg#check-mark-icon");
   background-repeat: no-repeat;
   background-position: center;
 }
