--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -7,7 +7,7 @@
 .map::before {
   content: "";
   display: block;
-  background-image: url("../../img/stack.svg#map-marker");
+  background-image: url("img/stack.svg#map-marker");
   width: 27px;
   height: 27px;
   background-repeat: no-repeat;
