--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -13,7 +13,7 @@
 .services__item--housing::before {
   content: "";
   display: block;
-  background-image: url("../../img/stack.svg#house-icon");
+  background-image: url("img/stack.svg#house-icon");
   width: 40px;
   height: 40px;
   background-repeat: no-repeat;
@@ -25,7 +25,7 @@
 .services__item--food::before {
   content: "";
   display: block;
-  background-image: url("../../img/stack.svg#burger-icon");
+  background-image: url("img/stack.svg#burger-icon");
   width: 40px;
   height: 36px;
   background-repeat: no-repeat;
@@ -37,7 +37,7 @@
 .services__item--souvenir::before {
   content: "";
   display: block;
-  background-image: url("../../img/stack.svg#gift-icon");
+  background-image: url("img/stack.svg#gift-icon");
   width: 32px;
   height: 38px;
   background-repeat: no-repeat;
