--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -13,8 +13,8 @@
   display: block;
   width: 48px;
   height: 48px;
-  -webkit-mask-image: url("mg/stack.svg#vk-icon"); /* stylelint-disable-line */
-  mask-image: url("img/stack.svg#vk-icon"); /* stylelint-disable-line */
+  -webkit-mask-image: url("../../img/stack.svg#vk-icon"); /* stylelint-disable-line */
+  mask-image: url("../../img/stack.svg#vk-icon"); /* stylelint-disable-line */
   -webkit-mask-position: center; /* stylelint-disable-line */
   mask-position: center; /* stylelint-disable-line */
   -webkit-mask-repeat: no-repeat; /* stylelint-disable-line */
@@ -28,8 +28,8 @@
   display: block;
   width: 48px;
   height: 48px;
-  -webkit-mask-image: url("img/stack.svg#telegram-icon"); /* stylelint-disable-line */
-  mask-image: url("img/stack.svg#telegram-icon"); /* stylelint-disable-line */
+  -webkit-mask-image: url("../../img/stack.svg#telegram-icon"); /* stylelint-disable-line */
+  mask-image: url("../../img/stack.svg#telegram-icon"); /* stylelint-disable-line */
   -webkit-mask-position: center; /* stylelint-disable-line */
   mask-position: center; /* stylelint-disable-line */
   -webkit-mask-repeat: no-repeat; /* stylelint-disable-line */
@@ -43,8 +43,8 @@
   display: block;
   width: 48px;
   height: 48px;
-  -webkit-mask-image: url("img/stack.svg#youtube-icon"); /* stylelint-disable-line */
-  mask-image: url("img/stack.svg#youtube-icon"); /* stylelint-disable-line */
+  -webkit-mask-image: url("../../img/stack.svg#youtube-icon"); /* stylelint-disable-line */
+  mask-image: url("../../img/stack.svg#youtube-icon"); /* stylelint-disable-line */
   -webkit-mask-position: center; /* stylelint-disable-line */
   mask-position: center; /* stylelint-disable-line */
   -webkit-mask-repeat: no-repeat; /* stylelint-disable-line */
