--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -19,7 +19,7 @@
 }
 
 .video__play {
-  background-image: url("img/video-phone.jpg");
+  background-image: url("../../img/video-phone.jpg");
   background-repeat: no-repeat;
   background-color: $base-bg;
   background-size: cover;
@@ -30,7 +30,7 @@
 
 @media (min-resolution: 2dppx) {
   .video__play {
-    background-image: url("img/video-phone@2x.jpg");
+    background-image: url("../../img/video-phone@2x.jpg");
   }
 }
 
@@ -40,14 +40,14 @@
   }
 
   .video__play {
-    background-image: url("img/video-desktop.jpg");
+    background-image: url("../../img/video-desktop.jpg");
     background-repeat: no-repeat;
     min-height: 500px;
   }
 
   @media (min-resolution: 2dppx) {
     .video__play {
-      background-image: url("img/video-desktop@2x.jpg");
+      background-image: url("../../img/video-desktop@2x.jpg");
     }
   }
 
