--- a/source/sass/blocks/item-advantages.scss
+++ b/source/sass/blocks/item-advantages.scss
@@ -16,6 +16,8 @@
 .item-advantages__image {
   background-color: $base-bg;
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 .item-advantages__title--light {
@@ -35,34 +37,25 @@
     min-height: 260px;
     object-fit: cover;
   }
-
-  .item-advantages__title {
-    br {
-      display: none;
-    }
-  }
-}
-
-@media (max-width: $tablet-width) {
-  .item-advantages__description {
-    br {
-      display: none;
-    }
-  }
 }
 
 @media (min-width: $tablet-width) {
   .item-advantages__wrapper {
-    padding: 41px 48px;
+    padding: 41px 33px;
+  }
+
+  .item-advantages__wrapper--road {
+    padding: 41px 40px;
   }
 
   .item-advantages__wrapper--with-img {
-    padding: 52px 33px 30px;
+    padding: 52px 32px 30px 32px;
   }
 
   .item-advantages__title {
     font-size: $tablet-title;
     margin-bottom: 15px;
+    padding: 0 20px;
   }
 
   .item-advantages__number {
@@ -88,6 +81,11 @@
 
   .item-advantages__title {
     margin-bottom: 16px;
+    padding: 0 70px;
+  }
+
+  .item-advantages__description--bridge {
+    padding: 0 17px;
   }
 
   .item-advantages__number {
