--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,18 +1,37 @@
 .modal {
   text-align: center;
+  background-color: $light;
+  width: 320px;
+  margin: auto;
 }
 
-.modal__error {
-  padding: 40px;
+.modal-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
 }
 
-.modal__success {
-  padding: 20px;
+.modal--error {
+  padding: 45px 41px 35px;
+}
+
+.modal__title-wrapper {
+  padding: 39px 37px 23px;
+}
+
+.modal-wrapper--close {
+  display: none;
 }
 
 .modal__button {
   padding: 18px 63px 14px;
   margin: 0 auto;
+  min-width: 180px;
 }
 
 .modal__button--success {
@@ -20,12 +39,73 @@
   max-width: 458px;
 }
 
+.modal__button-wrapper {
+  padding: 20px;
+  background-color: $second-bg;
+}
+
 .modal__title {
-  @include hero-title;
+  @include title;
+  margin: 0 0 25px;
+}
+
+.modal__description {
+  margin: 0 0 28px;
 }
 
 @media (min-width: $tablet-width) {
+  .modal__title {
+    font-size: 30px;
+    line-height: 40px;
+    padding: 0 30px;
+    margin: 0 0 20px;
+  }
+
+  .modal__description {
+    margin: 0 0 48px;
+  }
+
+  .modal--error {
+    width: 400px;
+    padding: 50px 47px 49px;
+  }
+
+  .modal--success {
+    width: 640px;
+  }
+
+  .modal__title-wrapper {
+    padding: 44px 37px 7px;
+  }
+
+  .modal__button {
+    font-size: $tablet-title;
+  }
+
   .modal__button--error {
     width: 272px;
+  }
+
+  .modal__button-wrapper {
+    padding: 44px 91px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .modal--error {
+    width: 400px;
+    padding: 48px 46px 49px;
+  }
+
+  .modal__title {
+    margin: 0 0 22px;
+  }
+
+  .modal__description {
+    margin: 0 0 48px;
+  }
+
+  .modal__title-wrapper {
+    padding: 44px 37px 5px;
   }
 }
