--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,11 +20,11 @@
 @import "./blocks/item-gallery.scss";
 @import "./blocks/item-reviews.scss";
 @import "./blocks/like-button.scss";
-@import "./blocks/main-container.scss";
 @import "./blocks/map.scss";
 @import "./blocks/modal.scss";
 @import "./blocks/navigation.scss";
 @import "./blocks/page.scss";
+@import "./blocks/popup.scss";
 @import "./blocks/reviews.scss";
 @import "./blocks/search.scss";
 @import "./blocks/services.scss";
