исправляю пути до изображений

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -3,7 +3,7 @@
 }
 
 .hero__wrapper {
-  background-image: url("../../img/stack.svg#index-hero-zigzag"), url("../../img/index-hero-background.webp");
+  background-image: url("../img/stack.svg#index-hero-zigzag"), url("../img/index-hero-background.webp");
   background-color: $base-bg;
   background-repeat: no-repeat;
   background-position: center bottom, 50% 30%;
@@ -52,7 +52,7 @@
 
 @media (min-resolution: 2dppx) {
   .hero__wrapper {
-    background-image: url("../../img/stack.svg#index-hero-zigzag"), url("../img/index-hero-background@2x.webp");
+    background-image: url("../img/stack.svg#index-hero-zigzag"), url("../img/index-hero-background@2x.webp");
   }
 }
 
