исправляю пути до изображений

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -29,7 +29,7 @@
 
 @media (max-width: $mobile-width-only) {
   .advantages__item--with-triangle {
-    background-image: url("../../img/stack.svg#advantages-triangle");
+    background-image: url("../img/stack.svg#advantages-triangle");
     padding-top: 36px;
     background-position: top;
     background-size: 768px 37px;
