--- a/source/sass/blocks/like-button.scss
+++ b/source/sass/blocks/like-button.scss
@@ -16,7 +16,7 @@
 
 .like-button__icon {
   display: block;
-  mask-image: url("../../img/stack.svg#like-icon");
+  mask-image: url("../img/stack.svg#like-icon");
   mask-repeat: no-repeat;
   background-color: rgba(0, 0, 0, 0.3);
   width: 23px;
