--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -49,13 +49,13 @@
 }
 
 .social__link--vkontakte {
-  mask-image: url("../../img/stack.svg#vk-icon");
+  mask-image: url("../img/stack.svg#vk-icon");
 }
 
 .social__link--telegram {
-  mask-image: url("../../img/stack.svg#telegram-icon");
+  mask-image: url("../img/stack.svg#telegram-icon");
 }
 
 .social__link--youtube {
-  mask-image: url("../../img/stack.svg#youtube-icon");
+  mask-image: url("../img/stack.svg#youtube-icon");
 }
