--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -15,7 +15,7 @@
 .services__item--souvenir::before {
   content: "";
   display: block;
-  background-image: url("../../img/stack.svg#house-icon");
+  background-image: url("../img/stack.svg#house-icon");
   width: 40px;
   height: 40px;
   background-repeat: no-repeat;
@@ -25,11 +25,11 @@
 }
 
 .services__item--food::before {
-  background-image: url("../../img/stack.svg#burger-icon");
+  background-image: url("../img/stack.svg#burger-icon");
 }
 
 .services__item--souvenir::before {
-  background-image: url("../../img/stack.svg#gift-icon");
+  background-image: url("../img/stack.svg#gift-icon");
 }
 
 .services__list {
